# firerust

./: .gitignore  README.md
firerust-api/: API.md  Cargo.toml  Makefile  README.md  config.json
firerust-api/data/: firerust.db-shm  firerust.db-wal
firerust-api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  web.rs
firerust-api/src/middleware/: admin.rs  jwt.rs  mod.rs
firerust-api/src/models/: auth_user.rs  file_record.rs  mod.rs  project.rs
firerust-api/src/routes/: admin.rs  auth.rs  db_model.rs  files.rs  mod.rs
firerust-api/src/tests/: integration.rs
firerust-api/static/: 404.html  index.html  index.txt
firerust-api/static/_next/static/chunks/: 88-9e762f89fc5d77d9.js  main-app-e85ed83eea1789db.js
firerust-api/static/_next/static/chunks/app/: layout-9147b274c30e3ba2.js  page-328147009004f855.js
firerust-api/static/_next/static/chunks/app/[projectId]/: layout-8b14e6dcd3a3c0cc.js  page-d838343c5244ff70.js
firerust-api/static/_next/static/chunks/app/admin/: page-8fe1541283e0d983.js
firerust-api/static/_next/static/chunks/app/db/: page-be04bfa3f5b82fe9.js
firerust-api/static/_next/static/css/: b8ec257a190d181a.css
firerust-api/static/_next/static/uc0Wmv2V8cWxikegOJ1B-/: _buildManifest.js  _ssgManifest.js
firerust-api/static/admin/: index.html  index.txt
firerust-api/static/db/: index.html  index.txt
firerust-api/static/x/: index.html  index.txt
firerust-api/static/x/auth/: index.html  index.txt
firerust-api/static/x/files/: index.html  index.txt
firerust-client/: package-lock.json  package.json
(+39 files in other folders)
